# P-RTA

./: .gitmodules  LICENSE  README.md  p-rta.tmLanguage
examples/example1/controllers/robot/: CMakeLists.txt  Main.cpp  helper.cpp  robot.p
examples/example1/controllers/try_supervisor/: all_trusted_falsifier_rhos.txt  analyze.py  plot.py  results.csv  rta_falsifier_percentages.txt  rta_falsifier_rhos.txt  scene  try.sc  try_sampler.py  try_supervisor.py
examples/example1/worlds/: example1.wbt
examples/example2/controllers/robot/: CMakeLists.txt  helper.cpp  helper.h  robot.p
examples/example2/controllers/slave/: CMakeLists.txt  Main.cpp  helper.cpp
examples/example2/controllers/try_supervisor/: all_trusted_50_percentages.txt  all_trusted_50_rhos.txt  all_trusted_percentages.txt  all_trusted_rhos.txt  analyze.py  plot.py  results.csv  results.numbers  rta_50_percentages.txt  rta_50_rhos.txt  rta_percentages.txt  rta_rhos.txt  scene_description.sc  try_sampler.py  try_supervisor.py
examples/example2/worlds/: example2.wbt
examples/example3/ego_robot/: ego_robot.p  helper.cpp  helper.hpp  motion_planner.p  motion_primitives.p  output_prta_exp1.txt  output_trusted_exp1.txt  output_untrusted_exp1.txt
examples/example3/visualization/: socket.cpp  visualization.py
examples/example4/ego_robot/: ego_robot.p  ego_robot_main.cpp  helper.cpp  helper.hpp  output_prta_exp2.txt  output_trusted_exp2.txt  output_untrusted_exp2.txt  socket.cpp
examples/example4/visualization/: visualization.py
repo/: README.md  ulgen.tmLanguage
repo/P/Bld/: build-c-runtime.sh  build.sh
repo/examples/example1/controllers/robot/: CMakeLists.txt  helper.cpp  helper.h  robot.p
repo/examples/example1/controllers/supervisor/: sampler.py  supervisor.py
repo/examples/example1/worlds/: example1.wbt
repo/examples/example2/controllers/robot/: helper.cpp  robot.p
repo/examples/example2/controllers/secondary/: CMakeLists.txt  helper.h  slave.p
repo/examples/example2/controllers/supervisor/: sampler.py  scene  supervisor.py
repo/examples/example3/robot/: CMakeLists.txt  helper.hpp  motion_primitives.p  robot.p
repo/examples/example3/visualization/: visualization.py
repo/examples/example4/robot/: CMakeLists.txt  helper.cpp  helper.hpp  motion_primitives.p  robot.p  robot_main.cpp  socket.cpp
repo/examples/example4/visualization/: visualization.py
repo/p_reelay/: p_reelay.cpp  p_reelay.h
videos/: README.md
